@@ -1,21 +1,36 @@
-PROFESSOR2 TO-DO LIST
-=====================
+PROFESSOR TO-DO LIST
+====================
 
-- Add prof-ipol, prof-tune, prof-viz
-
-- Move ipol Histo persistency to/from functions to prof2.io package
-
-   => IHisto direct persistency functions?
+FOR 2.0.0b1
+-----------
 
 - Smart Bin access to y val and err(s), i.e. without necessarily exposing Ipols to user
 
-- Need to abstract types a bit more for 2D histos, unbinned histos, etc?
+- Add minimising + eigentunes to prof-tune
 
-   Need to specialise for profiles
+   And writing out the resulting params files
+
+- Use weight and runcomb files in prof-ipol and prof-tune
+
+- Store param names and ranges in header of ipol file
+
+   Add functions forreading/writing files to IHistos.
+   Store/load via ipol-$(hashofruncombsandorders).dat
+
+- Add path, title, xy labels properties to Histo
 
 - Provide chi2(ih, dh) fuction in prof2.stats package
 
-- Provide easy plotting functions for scatters, contours, and 3D in prof2.plotting package
+
+FOR 2.0.0b2
+-----------
+
+- Add building Histo[DataBin] from .root files
+
+- Remove uncatchable calls to exit() and I/O streams
+
+   Prefer to throw exceptions / return strings directly, and when a print
+   function is needed, give it an optional arg to specify the target stream.
 
 - IHisto => DHisto function
 
@@ -23,9 +38,18 @@ PROFESSOR2 TO-DO LIST
 
 - Move Histo, etc. => prof2.data, prof2.ipol?
 
-- Add path, title, xy labels properties to Histo
+- Move ipol Histo persistency to/from functions to prof2.io package
 
-- Remove uncatchable calls to exit() and I/O streams
 
-   Prefer to throw exceptions / return strings directly, and when a print
-   function is needed, give it an optional arg to specify the target stream.
+FOR 2.0.0
+---------
+
+- Provide easy plotting functions for scatters, contours, and 3D in prof2.plotting package
+
+- Add prof-viz
+
+
+FOR LATER
+---------
+
+- Need to abstract data types a bit more for 2D histos, unbinned histos, profiles, etc?
